--- a/index.css
+++ b/index.css
@@ -21,4 +21,53 @@
 
 html {
   box-sizing: border-box;
+
+  /* Set font size for easy rem calculation
+  default font size = 16px, 1rem = 16px, 100% = 16px
+  (100% / 16) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
+   */
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+/* A few media query to set font size for diffrent screen sizes
+I'm using rem unit for size values becuase it's relative 
+to the document font size.
+ */
+
+/* I am using the em unit for breakpoints
+The calculation is the following
+screen size divided by browser base font size
+ */
+
+ /* Refrence: https://zellwk.com/blog/media-query-units/ */
+
+/* 1200px / 16px = 75em */
+@media (max-width: 75em) {
+  html {
+    /* (100% / 16) * 9.6 = 60%, 1rem = 9.6px*/
+    font-size: 60%;
+  }
+}
+
+/* 980px / 16px = 61.25em */
+@media (max-width: 61.25em) {
+  html {
+    /* (100% / 16) *  9.28 = 58%, 1rem = 9.28px */
+    font-size: 58%;
+  }
+}
+
+/* 460px / 16 = 28.75em */
+@media (max-width: 28.75em) {
+  html {
+    /* (100% / 16) * 8.8 = 55%, 1rem = 8.8px */
+    font-size: 55%;
+  }
+}
+
+/* Base styles */
+
+body {
+    
 }
