--- a/index.css
+++ b/index.css
@@ -152,5 +152,18 @@ img {
   width: 100%;
   height: 100vh;
   background-color: #000;
-  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 60%);
+  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 75%);
+}
+
+.welcome-section > p {
+  font-size: 3rem; /* 30px */
+  font-weight: 200;
+  font-style: italic;
+  color: var(--main-red);
+}
+
+.projects-section {
+  text-align: center;
+  padding: 10rem 2rem; /* 100px 20px */
+  background: var(--main-blue);
 }
